# mal-personal

./: malPersonal.cabal  stack.yaml
app/: Main.hs
src/: Core.hs  Environment.hs  Evaluator.hs  Parser.hs  Read.hs  ReadEval.hs  Rep.hs  Types.hs
test/: EnvironmentSpec.hs  EvaluatorSpec.hs  ParserSpec.hs  Spec.hs
