name:                malPersonal
version:             0.1.0.0
synopsis:            A lisp interpreter I'm making.
description:         Please see README.md
homepage:            http://github.com/githubuser/new-template#readme
license:             BSD3
license-file:        LICENSE
author:              Fraser Mince
maintainer:          frasermince@gmail.com
copyright:           2015 Fraser Mince
category:            Interpreter
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Evaluator
                     , Parser
                     , Rep
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable malPersonal-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , malPersonal
                     , parsec
  default-language:    Haskell2010

test-suite mapPersonal-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , malPersonal
                     , hspec
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/new-template